Fix hytale, null usage/help messages